tests/invalid/if/i22_if_cond_not_logical.f
program badif
  integer i
  i = 1
  if (i) then
    print *, i
  endif
end
